# nato-phonetic-alphabet

./: .gitignore  .markdownlint.json  Makefile  Nato Phonetic Alphabet - EPub.epub  Nato Phonetic Alphabet - Microsoft Word.docx  Nato Phonetic Alphabet - Open Doc Format.odt  Nato Phonetic Alphabet Landscape.pages  Nato Phonetic Alphabet.epub  Nato Phonetic Alphabet.pages  README.md  Social Image.pxd  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/plans/: 2026-05-21-dynamic-asset-generation.md
.cursor/rules/: nato-phonetic-cli.mdc
.githooks/: pre-push
.github/workflows/: publish.yml
docs/superpowers/specs/: 2026-05-21-dynamic-asset-generation-design.md
scripts/: __init__.py
scripts/build_assets/: __init__.py  __main__.py  _zip_util.py  config.py  docx.py  epub.py  pdf.py
src/nato_phonetic/: __init__.py  __main__.py  assets.py  cli.py  core.py  entrypoint.py
tests/: __init__.py  test_assets.py  test_build_assets.py  test_core.py
